--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version> <!-- Or whatever JUnit you're using. -->
